Replace Spring annotations with modern alternatives and refactor field injection to constructor-based injection